refactor: 회원가입,로그인 부분60 % / css 적용 x

--- a/conf/locale/ko_KR/LC_MESSAGES/django.po
+++ b/conf/locale/ko_KR/LC_MESSAGES/django.po
@@ -24721,3 +24721,7 @@ msgstr "커뮤니티"
  #: lms/templates/header/navbar-authenticated.html
 msgid "Participating Institutions"
 msgstr "참여기관"
+
+#: lms/templates/header/navbar-authenticated.html
+msgid "About Us"
+msgstr "K-MOOC란?"
