--- a/conf/locale/ko_KR/LC_MESSAGES/django.po
+++ b/conf/locale/ko_KR/LC_MESSAGES/django.po
@@ -26127,3 +26127,17 @@ msgstr "오픈 API"
 #: lms/templates/footer.html
 msgid "HelpU"
 msgstr "원격도우미"
+
+#: openedx/core/djangoapps/user_api/views.py
+msgid ""
+"The name that will identify you in your courses - {bold_start}(cannot be "
+"changed later){bold_end}"
+msgstr "5~20자의 영문 소문자, 숫자와 특수기호(_),(-)만 사용 가능합니다. {bold_start}(추후 변경 불가){bold_end}"
+
+msgid ""
+"The password that will identify you in your courses - {bold_start}(cannot be "
+"changed later){bold_end}"
+msgstr "영문 소문자, 숫자, 특수문자 3가지를 모두 조합하여 9자 이상으로 입력해주세요."
+
+msgid "Please use your most frequently used e-mails to activate your account, log in, and change your password."
+msgstr "계정활성화, 로그인, 비밀번호 변경 등에 사용되오니 자주 사용하는 이메일로 적어주세요."
