refactor:course_about tool_tip

--- a/conf/locale/ko_KR/LC_MESSAGES/django.po
+++ b/conf/locale/ko_KR/LC_MESSAGES/django.po
@@ -15061,6 +15061,9 @@ msgstr "스튜디오에서 About Page 보기"
 msgid "Classes Start"
 msgstr "개강일"
 
+msgid "Classes Period"
+msgstr "강좌 운영 기간"
+
 #: lms/templates/courseware/course_about.html
 msgid "Classes End"
 msgstr "종강일"
@@ -26424,3 +26427,236 @@ msgstr "동의대학교"
 
 msgid "Please use your most frequently used e-mails to activate your account, log in, and change your password."
 msgstr "계정활성화, 로그인, 비밀번호 변경 등에 사용되오니 자주 사용하는 이메일로 적어주세요."
+
+#: cms/templates/index.html
+#msgid "Select Organization"
+#msgstr "기관 선택"
+
+msgid "Select Institute"
+msgstr "기관 선택"
+
+msgid "Select main category"
+msgstr "대분류 선택"
+
+msgid "Select sub category"
+msgstr "중분류 선택"
+
+msgid "Select Linguistics"
+msgstr "한국학여부 선택"
+
+msgid "Korean studies"
+msgstr "한국학"
+
+msgid "Others"
+msgstr "그 외"
+
+msgid "Select Fusion & Convergence category"
+msgstr "융합 분류 선택"
+
+#msgid "Humanities"
+#msgstr "인문"
+
+#msgid "Social Sciences"
+#msgstr "사회"
+
+#msgid "Education"
+#msgstr "교육"
+
+#msgid "Engineering"
+#msgstr "공학"
+
+#msgid "Natural Sciences"
+#msgstr "자연"
+
+msgid "Medical Sciences & Pharmacy"
+msgstr "의약"
+
+msgid "Arts & Physical Education"
+msgstr "예체능"
+
+msgid "Fusion & Convergence"
+msgstr "융ㆍ복합"
+
+#: cms/templates/settings.html
+msgid "Recommended commitment Effort per week"
+msgstr "주간 학습권장시간"
+
+msgid "Total no. of weeks Length"
+msgstr "총 주차"
+
+msgid "Accredited learning time"
+msgstr "학습인정시간"
+
+msgid "hours, minutes, weeks"
+msgstr "시간, 분, 주차"
+
+msgid "hours"
+msgstr "시간"
+
+#msgid "minutes"
+#msgstr "분"
+
+msgid "weeks"
+msgstr "주차"
+
+msgid "- Weekly Study : Estimated hours for doing weekly learning activities like video, assignments and group discussions"
+msgstr "- 주간 학습권장시간 : 해당 강좌를 충실히 학습하기 위해 필요한 주별 평균 권장 학습시간"
+
+msgid "- Length : No. of weeks including mid-term/final tests weeks"
+msgstr "- 총 주차 : 중간/기말고사를 포함한 총 주차수 (예 : 15주차 = 13주(강의) + 1주(중간고사) + 1주(기말고사))"
+
+msgid "- Accredited learning time: The accredited amount of time students are actively involved in the learning process"
+msgstr "- 학습인정시간 : 본 강좌 이수자에게 인정되는 학습시간으로 해당 강좌의 동영상, 과제, 시험, 퀴즈, 토론 등의 시간을 포함"
+
+msgid "Up to 50 hours for 13 weeks course according to 'Accredited learning time Guide'"
+msgstr "'학습인정시간 산출지침'에 따라 13주차 기준 최대 50시간 이내로 산정"
+
+msgid "Video Duration"
+msgstr "총 동영상시간"
+
+msgid "Video Duration : Total video duration related with course contents"
+msgstr "총 동영상시간: 강의 내용과 관련된 동영상 재생 시간의 총 합계 ※ 강의 내용과 무관한 홍보동영상 등은 제외"
+
+msgid "Course difficulty"
+msgstr "난이도"
+
+msgid "Not applicable"
+msgstr "미선택"
+
+msgid "beginner"
+msgstr "교양"
+
+msgid "intermediate"
+msgstr "전공기초"
+
+msgid "advanced"
+msgstr "전공심화"
+
+msgid "Name of Lecturer"
+msgstr "교수자명"
+
+msgid "EX. Albert Einstein, Marie Curie"
+msgstr "예: 홍길동, 임꺽정"
+
+msgid "Please insert a comma (,) between Lecturers"
+msgstr "교수자가 복수인 경우 콤마(,) 로 구분해서 입력해주세요(예: 홍길동, 임꺽정)"
+
+msgid "Linguistics & Literature"
+msgstr "언어ㆍ문학"
+
+msgid "Human Sciences"
+msgstr "인문과학"
+
+msgid "Business Administration & Economics"
+msgstr "경영ㆍ경제"
+
+msgid "Law"
+msgstr "법률"
+
+msgid "General Education"
+msgstr "교육일반"
+
+msgid "Early Childhood Education"
+msgstr "유아교육"
+
+msgid "Special Education"
+msgstr "특수교육"
+
+msgid "Elementary Education"
+msgstr "초등교육"
+
+msgid "Secondary Education"
+msgstr "중등교육"
+
+msgid "Architecture"
+msgstr "건축"
+
+msgid "Civil Construction & Urban Engineering"
+msgstr "토목ㆍ도시"
+
+msgid "Transportation"
+msgstr "교통ㆍ운송"
+
+msgid "Mechanical & Metallurgical Engineering"
+msgstr "기계ㆍ금속"
+
+msgid "Electricity & Electronics"
+msgstr "전기ㆍ전자"
+
+msgid "Precision & Energy"
+msgstr "정밀ㆍ에너지"
+
+msgid "Materials"
+msgstr "소재ㆍ재료"
+
+msgid "Computers & Communication"
+msgstr "컴퓨터ㆍ통신"
+
+msgid "Industrial Engineering"
+msgstr "산업"
+
+msgid "Chemical Engineering"
+msgstr "화공"
+
+msgid "Agriculture & Fisheries"
+msgstr "농림ㆍ수산"
+
+msgid "Biology, Chemistry & Environmental Science"
+msgstr "생물ㆍ화학ㆍ환경"
+
+msgid "Living Science"
+msgstr "생활과학"
+
+msgid "Mathematics, Physics, Astronomy & Geography"
+msgstr "수학ㆍ물리ㆍ천문ㆍ지리"
+
+msgid "Medical Science"
+msgstr "의약"
+
+msgid "Nursing"
+msgstr "간호"
+
+msgid "Pharmacy"
+msgstr "약학"
+
+msgid "Therapeutics & Public Health"
+msgstr "치료ㆍ보건"
+
+msgid "Design"
+msgstr "디자인"
+
+msgid "Applied Arts"
+msgstr "응용예술"
+
+msgid "Dancing & Physical Education"
+msgstr "무용ㆍ체육"
+
+msgid "FineArts & Formative Arts"
+msgstr "미술ㆍ조형"
+
+msgid "Drama & Cinema"
+msgstr "연극ㆍ영화"
+
+msgid "Music"
+msgstr "음악"
+
+msgid "Select the difficulty level of the course."
+msgstr "강좌 내용의 어려운 수준을 선택하세요."
+
+msgid "study_date"
+msgstr "개강일"
+
+msgid "univ_name"
+msgstr "운영기관"
+
+msgid "Course Week"
+msgstr "주차"
+
+msgid "week"
+msgstr "주"
+
+msgid "Previous Courses"
+msgstr "이전 강좌"
+
+msgid "Current Course"
+msgstr "현재 강좌"
